Name: data-dword
Version: 0.0.1
Category: Data
Stability: experimental
Synopsis: Stick two binary words together to get a bigger one
Description:
  This package provides Template Haskell utilities for declaring fixed-length
  binary word data types. Signed and unsigned 96, 128, 160, 192, 224, and
  256-bit types are predefined.

Homepage: https://github.com/mvv/data-dword
Bug-Reports: https://github.com/mvv/data-dword/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2011 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.6.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/data-dword.git

Library
  Build-Depends:
    base             >= 4 && < 5,
    data-endian      >= 0.0.1,
    hashable         >= 1.1,
    template-haskell >= 2.6
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Data.DoubleWord
    Data.DoubleWord.TH
  Other-Modules:
    Data.DoubleWord.Base

